--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,7 +25,9 @@ pipeline {
 
         stage('Update Kubeconfig') {
             steps {
+                withCredentials([aws(accessKeyVariable: 'AWS_ACCESS_KEY_ID', credentialsId: 'aws', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY')]) {
                 sh "aws eks update-kubeconfig --name ${cluster_name} --region ${region}"
+                }
             }
         }
 
