--- a/jenkinsfile
+++ b/jenkinsfile
@@ -42,6 +42,7 @@ pipeline {
         stage('Deploy to Kubernetes') {
             steps {
                 withCredentials([aws(accessKeyVariable: 'AWS_ACCESS_KEY_ID', credentialsId: 'aws', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY')]) {
+                sh "kubectl delete -n ${namespace} -f kubernetes"
                 sh "kubectl apply -n ${namespace} -f kubernetes"
                 }
             }
